# EconomyCalendarSnapshots

./: .gitignore  README.md  get_current_week_news.py  pyproject.toml  save_to_git.py  test_news_data.py
.github/workflows/: doit.yml  keepalive.yml
